--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,25 +106,45 @@ test:macos-python-qt:
 
 # Windows
 
-build:windows-vs2019-mpi-qt:
+build:windows-vs2019-kits-mpi-python-qt:
     extends:
-        - .windows_vs2019_mpi_qt
+        - .windows_vs2019_kits_mpi_python_qt
         - .cmake_build_windows
         - .windows_builder_tags
         - .cmake_build_artifacts
         - .run_manually
 
-test:windows-vs2019-mpi-qt:
+test:windows-vs2019-kits-mpi-python-qt:
     extends:
-        - .windows_vs2019_mpi_qt
+        - .windows_vs2019_kits_mpi_python_qt
         - .cmake_test_windows
         - .windows_builder_tags
         - .cmake_build_artifacts
         - .run_automatically
     dependencies:
-        - build:windows-vs2019-mpi-qt
+        - build:windows-vs2019-kits-mpi-python-qt
     needs:
-        - build:windows-vs2019-mpi-qt
+        - build:windows-vs2019-kits-mpi-python-qt
+
+build:windows-vs2019-qt:
+    extends:
+        - .windows_vs2019_qt
+        - .cmake_build_windows
+        - .windows_builder_tags
+        - .cmake_build_artifacts
+        - .run_manually
+
+test:windows-vs2019-qt:
+    extends:
+        - .windows_vs2019_qt
+        - .cmake_test_windows
+        - .windows_builder_tags
+        - .cmake_build_artifacts
+        - .run_automatically
+    dependencies:
+        - build:windows-vs2019-qt
+    needs:
+        - build:windows-vs2019-qt
 
 # Deployment
 
