--- a/.gitlab/os-windows.yml
+++ b/.gitlab/os-windows.yml
@@ -31,11 +31,17 @@
         VCVARSPLATFORM: "x64"
         VCVARSVERSION: "14.26"
 
-.windows_vs2019_mpi_qt:
+.windows_vs2019_kits_mpi_python_qt:
     extends: .windows_vs2019
 
     variables:
-        CMAKE_CONFIGURATION: windows_vs2019_mpi_qt
+        CMAKE_CONFIGURATION: windows_vs2019_kits_mpi_python_qt
+
+.windows_vs2019_qt:
+    extends: .windows_vs2019
+
+    variables:
+        CMAKE_CONFIGURATION: windows_vs2019_qt
 
 ## Tags
 
