qt: remove conditionals for unsupported Qt versions
5.12 is the oldest supported release at the moment, so remove support
for older versions.

--- a/Qt/Core/CMakeLists.txt
+++ b/Qt/Core/CMakeLists.txt
@@ -164,7 +164,9 @@ endif ()
 
 vtk_module_find_package(
   PACKAGE     Qt5
-  COMPONENTS  ${qt_components})
+  COMPONENTS  ${qt_components}
+  VERSION     5.12
+  FORWARD_VERSION_REQ MINOR)
 
 set(CMAKE_AUTOMOC 1)
 set(CMAKE_AUTORCC 1)
