--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -1163,6 +1163,7 @@ if(PARAVIEW_USE_PYTHON)
   list(APPEND TESTS_WITH_BASELINES
     ColorByComponentNames.xml # needs programmable filter
     LiveProgrammableSource.xml
+    ProgrammableAnnotation.xml
     PythonShellRunScript.xml
     SaveLoadStatePython.xml
     SelectionLabels.xml
