gitlab-ci: always upload build logs

--- a/.gitlab/artifacts.yml
+++ b/.gitlab/artifacts.yml
@@ -3,6 +3,8 @@
 .doxygen_log_artifacts:
     artifacts:
         expire_in: 1 day
+        # Because build logs are in here, we should always upload artifacts.
+        when: always
         paths:
             - compile_output.log
             - doxygen_output.log
@@ -12,6 +14,8 @@
 .cmake_build_artifacts:
     artifacts:
         expire_in: 1d
+        # Because build logs are in here, we should always upload artifacts.
+        when: always
         paths:
             # Logs of the build
             - compile_output.log
