--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -2,6 +2,14 @@ set(python_files
   paraview/__init__.py
   paraview/_backwardscompatibilityhelper.py
   paraview/_colorMaps.py
+  paraview/apps/__init__.py
+  paraview/apps/__main__.py
+  paraview/apps/_internals.py
+  paraview/apps/divvy.py
+  paraview/apps/flow.py
+  paraview/apps/glance.py
+  paraview/apps/lite.py
+  paraview/apps/visualizer.py
   paraview/benchmark/__init__.py
   paraview/benchmark/basic.py
   paraview/benchmark/logbase.py
