--- a/Qt/Widgets/CMakeLists.txt
+++ b/Qt/Widgets/CMakeLists.txt
@@ -77,6 +77,7 @@ set(classes
   pqSpinBox
   pqTableView
   pqTextEdit
+  pqTimelineScrollbar
   pqTreeView
   pqTreeViewExpandState
   pqTreeViewSelectionHelper
