Catalyst 2.0: adding hard-coded pipelines
Adding support for compiled-in pipelines.
Adding vtkInSituPipelineIO that can be used to write data on any channel
using writers supported by ParaView.

--- a/Clients/InSitu/CMakeLists.txt
+++ b/Clients/InSitu/CMakeLists.txt
@@ -30,6 +30,7 @@
 #==========================================================================
 set(classes
   vtkInSituPipeline
+  vtkInSituPipelineIO
   vtkInSituPipelinePython
   vtkInSituInitializationHelper)
 
