Simplify Catalyst V2 python scripts
This commit has several changes to the Catalyst Python script V2
that was introduced recently. The highlights are as follows:

1. ParaView GUI now exports .py files instead of .zip when exporting
   Catalyst Python scripts.

2. The callback functions has been renamed to `catalyst_initialize`,
   `catalyst_execute` and `catalyst_finalize`. This matches the API
   calls in the new Catalyst API and hence will continue to make sense
   in that new landscape as well.

3. Docs for the Catalyst Python script have been revamped to provide a
   step by step introduction to the Python modules and packages.

--- a/Clients/PythonCatalyst/CMakeLists.txt
+++ b/Clients/PythonCatalyst/CMakeLists.txt
@@ -33,6 +33,7 @@ set(classes
   vtkCPPythonAdaptorAPI
   vtkCPPythonPipeline
   vtkCPPythonScriptPipeline
+  vtkCPPythonScriptV2Helper
   vtkCPPythonScriptV2Pipeline
   vtkCPPythonStringPipeline)
 
