ci: add builds for editions.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,6 +82,52 @@ test:fedora31-shared-icc-mpi-python:
     needs:
         - build:fedora31-shared-icc-mpi-python
 
+
+## editions
+build:fedora33-shared-mpi-core:
+    extends:
+        - .fedora33_shared_mpi_core
+        - .cmake_build_linux
+        - .linux_builder_tags
+        - .cmake_build_artifacts
+        - .run_manually
+
+test:fedora33-shared-mpi-core:
+    extends:
+        - .fedora33_shared_mpi_core
+        - .cmake_test_linux
+        - .linux_tester_tags
+        - .cmake_test_artifacts
+        - .run_automatically
+    dependencies:
+        - build:fedora33-shared-mpi-core
+    needs:
+        - build:fedora33-shared-mpi-core
+    # editions testing needs some work.
+    allow_failure: true
+
+build:fedora33-shared-mpi-python-core:
+    extends:
+        - .fedora33_shared_mpi_python_core
+        - .cmake_build_linux
+        - .linux_builder_tags
+        - .cmake_build_artifacts
+        - .run_manually
+
+test:fedora33-shared-mpi-python-core:
+    extends:
+        - .fedora33_shared_mpi_python_core
+        - .cmake_test_linux
+        - .linux_tester_tags
+        - .cmake_test_artifacts
+        - .run_automatically
+    dependencies:
+        - build:fedora33-shared-mpi-python-core
+    needs:
+        - build:fedora33-shared-mpi-python-core
+    # editions testing needs some work.
+    allow_failure: true
+
 # macOS
 
 build:macos-python-qt:
