openpmd: add reader to ParaView
Adding XML and Python module-related code to enable openPMD reader in a
Python-enabled build of ParaView. The reader requires that `openpmd_api`
Python package is externally installed.

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -2,6 +2,8 @@ set(python_files
   paraview/__init__.py
   paraview/_backwardscompatibilityhelper.py
   paraview/_colorMaps.py
+  paraview/algorithms/__init__.py
+  paraview/algorithms/openpmd.py
   paraview/apps/__init__.py
   paraview/apps/__main__.py
   paraview/apps/_internals.py
